[gd_scene load_steps=3 format=3 uid="uid://c8u8pd5xfvt8q"]

[ext_resource type="Script" path="res://tests/test_scene.gd" id="1_xjk2t"]
[ext_resource type="Script" path="res://tests/test_runner.gd" id="2_yjk2t"]

[node name="TestScene" type="Node"]
script = ExtResource("1_xjk2t")

[node name="TestRunner" type="Node" parent="."]
script = ExtResource("2_yjk2t")

[node name="RunButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Run Tests"

[node name="ResultsLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
text = "Press the button to run tests."
horizontal_alignment = 1

[connection signal="pressed" from="RunButton" to="TestRunner" method="run_all_tests"]
[connection signal="tests_completed" from="TestRunner" to="." method="_on_tests_completed"] 